Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug
Bug#: 14897
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Bud Davis <bdavis@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: bdavis9659@comcast.net
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 14897 depends on: Show dependency tree
Show dependency graph
Bug 14897 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: 2004-05-17 20:04 Opened: 2004-04-09 01:44
A small example to demonstrate:

 
      WRITE(*,'(20H12345678901234567890)')
      WRITE(*,'(T5,A,T10,A,T15,A)')'AA','BB','CC'
      WRITE(*,'(20H    AA   BB   CC    )')
      END


$ gfortran aa.f
$ ./a.out
12345678901234567890
     AA   BB   CC
    AA   BB   CC


and from g77:
$ g77 aa.f
$ ./a.out
12345678901234567890
    AA   BB   CC
    AA   BB   CC

using :
$ gfortran --version
GNU Fortran 95 (GCC 3.5-tree-ssa 20040407 (merged 20040331))

------- Comment #1 From Andrew Pinski 2004-04-11 22:17 -------
Did I not test this after a patch was applied?
At line 4 of file pr14897.f
Fortran runtime error: Missing initial left parenthesis in format

^

------- Comment #2 From Andrew Pinski 2004-04-12 00:36 -------
Confirmed.

------- Comment #3 From Bud Davis 2004-06-03 01:16 -------
proposed patch:

http://gcc.gnu.org/ml/fortran/2004-06/msg00008.html

------- Comment #4 From CVS Commits 2004-06-09 01:03 -------
Subject: Bug 14897

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	bdavis@gcc.gnu.org	2004-06-09 01:03:02

Modified files:
	gcc/testsuite  : ChangeLog 
	libgfortran/io : transfer.c 
	libgfortran    : ChangeLog 
Added files:
	gcc/testsuite/gfortran.fortran-torture/execute: t_edit.f90 

Log message:
	2004-06-09  Bud Davis  <bdavis9659@comcast.net>
	
	PR gfortran/14897
	* gfortran.fortran-torture/execute/t_edit.f90
	
	* io/transfer.c (formatted_transfer): position is unique
	for T and TL edit descriptors.
	(data_transfer_init): set record length to size of internal
	file.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/gfortran.fortran-torture/execute/t_edit.f90.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/ChangeLog.diff?cvsroot=gcc&r1=1.3829&r2=1.3830
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/io/transfer.c.diff?cvsroot=gcc&r1=1.5&r2=1.6
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/ChangeLog.diff?cvsroot=gcc&r1=1.24&r2=1.25


------- Comment #5 From Andrew Pinski 2004-06-09 01:08 -------
Fixed.

Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug