2004-06-09  Bud Davis  <bdavis9659@comcast.net>

PR gfortran/14897
	* gfortran.fortran-torture/execute/t_edit.f90

 	* io/transfer.c (formatted_transfer): position is unique
         for T and TL edit descriptors.
 	(data_transfer_init): set record length to size of internal
         file.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@82808 138bc75d-0d04-0410-961f-82ee72b054a4